# theorygate

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: EXAMPLES.md  LIMITATIONS.md
tests/: test_theorygate.py
theorygate/: __init__.py  __main__.py  branching.py  elements.py  formula.py  gate.py  lab.py
